SubBt/force-app/main/default/objects/Receipt_Line__c/Receipt_Line__c.object-meta.xml
<CustomObject>
    <label>Receipt Line</label>
    <nameField>
        <displayFormat>RCL-{00000}</displayFormat>
        <label>Receipt Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipt Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>