SubBt/force-app/main/default/objects/Receipt_Line__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Receipt Lines</relationshipLabel>
    <relationshipName>Receipt_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>