SubBt/force-app/main/default/objects/Receipt_Line__c/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <formula>Quantity__c *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SubTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>